@@ -79,6 +79,6 @@ void z80_assignRegisters (ebbIndex *);
 bitVect *z80_rUmaskForOp (const operand * op);
 
 void spillThis (symbol *);
-void z80_ralloc2_cc(ebbIndex *ebbi);
+iCode *z80_ralloc2_cc(ebbIndex *ebbi);
 
 #endif
